--- a/modelo_copin/app/distrib.tex
+++ b/modelo_copin/app/distrib.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Distribuição das variáveis das cinco maiores comunidades}
+\chapter{Cinco maiores comunidades}
 \label{app:distrib}
 
 \begin{figure}
