--- a/modelo_copin/app/info.tex
+++ b/modelo_copin/app/info.tex
@@ -12,7 +12,7 @@
 	P{0.1\linewidth}
 	p{0.15\linewidth}@{}}
 \toprule
-\textit{Comunidade}  & \textit{Categoria}    & \textit{Idade} & \textit{Número Homens} & \textit{Número Mulheres} & \textit{Proporção Identif.} \\ \midrule
+\textit{Comunidade}  & \textit{Categoria}    & \textit{Idade (meses)} & \textit{Número Homens} & \textit{Número Mulheres} & \textit{Proporção Identif.} \\ \midrule
 \endhead
 
 \\ \hline
