--- a/modelo_copin/app/q1.tex
+++ b/modelo_copin/app/q1.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../main_mestrado.tex
 
 \begin{landscape}
-\chapter{Resultados estatísticos para a primeira pergunta de pesquisa}
+\chapter{Estatísticas da primeira pergunta de pesquisa}
 \label{app:q1}
 
 \small
