--- a/modelo_copin/app/q2.tex
+++ b/modelo_copin/app/q2.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../main_mestrado.tex
 \begin{landscape}
 
-\chapter{Resultados estatísticos para a segunda pergunta de pesquisa}
+\chapter{Estatísticas da segunda pergunta de pesquisa}
 \label{app:q2}
 \small
 * = Diferença entre a média das mulheres e a média dos homens. \\
