--- a/modelo_copin/app/q3.tex
+++ b/modelo_copin/app/q3.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Resultados estatísticos para a terceira pergunta de pesquisa}
+\chapter{Estatísticas da terceira pergunta de pesquisa}
 \label{app:q3}
 
 \small
