--- a/modelo_copin/app/q4.tex
+++ b/modelo_copin/app/q4.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Resultados estatísticos para a quarta pergunta de pesquisa}
+\chapter{Estatísticas da quarta pergunta de pesquisa}
 \label{app:q4}
 
 \small
