--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -1,43 +1,26 @@
 %!TEX root = main_mestrado.tex
 
-\chapter{Limitações}
-\label{ch:limites}
-% In spite of the insights given in this paper, this study is not conclusive in itself. For following up on this research, a qualitative enquire seems paramount to deepen the analysis started here. Also, widening the factors related to participation can help put our results in perspective.
 
-Apesar de todas as resoluções as quais chegamos nesta pesquisa, ela não é completa. Uma pesquisa qualitativa soa como um bom começo para complementar as análises que começamos aqui. Outrossim, adicionar mais fatores relacionados à participação pode ajudar a ampliar a visão que temos da situação.
-
-% Regarding gender definition, our samples were limited by the users who identified themselves through names listed in the Global Name Data. This approach likely under represents users from countries whose names are not well represented in name registrations in the UK and US. Future research could also compare the effect of a user disclosing his or her gender through other means, such as an avatar. 
-
-Quanto à inferência de gênero, limitamos nossa amostra àqueles usuários que identificaram a si mesmo com nomes contidos no \emph{Global Name Data}. Esta abordagem pode ter descartado usuários de outros países cujos nomes não são comuns nos registros de nascimento dos Estados Unidos e Reino Unido. Uma pesquisa futura poderia realizar as mesmas comparações que fizemos, mas utilizando um outro método de identificação de gênero, como a foto do perfil do usuário.
-
-% Although our sample of sites has a significant diversity in themes, all the sites we study are from the StackExchange platform. Contrasting these results with sites that have similar purpose but a different design may help us further understand the interplay between site design, community composition, and behavior. 
-
-Embora nossa amostra contenha sites com uma diversidade significante de temas, todos eles pertencem a uma mesma plataforma: o \emph{StackExchange}. Comparar nossos resultados com outros sites que tenham um propósito similar, mas um design diferente pode ajudar a entender melhor a relação entre o design do site, a diversidade de gêneros da comunidade e o comportamento de seus usuários.
-
-% Finally, our quantitative approach and the dataset used do not allow us to delve into the reasons for several of the differences and similarities found. Qualitative studies that complement our enterprise seem necessary and timely. 
-
-Finalmente, nossa abordagem quantitativa e conjunto de dados usado não nos permite investigar profundamente quanto às razões de várias diferenças e similaridades encontradas. Nos parece necessário e oportuno realizar um estudo qualitativo que complementasse nossa iniciativa.
 
 \chapter{Conclusões}
 \label{ch:concl}
 
-% This paper took an alternative approach into gender studies in Q\&A online communities, changing the focus from the number of users of each sex to their participation, quality of contributions and engagement. Overall, our results show that, individually, women who display their gender information do engage to these sites as much as men do. In several sites, women indeed tend to individually contribute more than men. 
-
 Enquanto estudos de gênero em comunidades de perguntas e respostas costumam focar em número de usuários de cada gênero, esta pesquisa tomou uma abordagem diferente, estudando a participação, qualidade das contribuições e engajamento de usuários de ambos os gêneros. No geral, nossos resultados nos mostram que, individualmente, mulheres que identificam seu gênero, se comprometem aos sites tanto quanto homens. Em vários sites, mulheres contribuem até mais do que homens.
 
-% Similarly to Wikipedia~\cite{lam2011wp}, women contribute with relevant content in Q\&A sites, but the vast majority of the contributions still comes from men. It is known that a diverse environment can benefit a community, and our study also quantifies that after joining the Q\&A communities we study, women seem to have no barrier for producing valuable content and engaging as much as men with the system. Our study does not focus on investigating why there are sensibly fewer women in StackExchange communities. However, it stresses that not including or motivating women to join can be a wastage of valuable and loyal contributors.
+Semelhante à \emph{Wikipedia}~\cite{lam2011wp}, mulheres contribuem com conteúdo relevante para sites de perguntas e respostas, mas a grande maioria das contribuições ainda vêm de homens. Nosso estudo nos revela que, depois de passar um tempo contribuindo para os sites que estudamos, mulheres parecem encontrar uma barreira para continuar produzindo conteúdo de valia e continuar engajadas tanto quanto os homens. Não é objetivo do nosso estudo investigar porque há tão poucas mulheres dentro destas comunidades, mas saber que ambientes diversos beneficiam o funcionamento e qualidade de uma comunidade, nos leva a concluir que não incluir ou não motivar mulheres a entrar nestas comunidades pode ser um grande desperdício de contribuidores que podem manter, ou até aumentar, a qualidade dessas comunidades.
 
-Semelhante à \emph{Wikipedia}~\cite{lam2011wp}, mulheres contribuem com conteúdo relevante para sites de perguntas e respostas, mas a grande maioria das contribuições ainda vêm de homens. Nosso estudo nos revela que, depois de passar um tempo contribuindo para os sites que estudamos, mulheres parecem encontrar uma barreira para continuar produzindo conteúdo de valia e continuar engajadas tanto quanto os homens. Não é objetivo do nosso estudo investigar porque há tão poucas mulheres dentro destas comunidades, mas saber que ambientes diversos beneficiam o funcionamento e qualidade de uma comunidade, nos leva a concluir que não incluir ou não motivar mulheres a entrar nestas comunidades pode ser um grande desperdício de contribuidores valiosos e fiéis.
+Um aspecto, que gostaríamos de destacar, destes resultados é a percepção de quão ativas mulheres podem ser nestas comunidades. Este fato pode ser aproveitado para incentivar a participação de mulheres nestes sites. Apresentar as contribuidoras que encontramos nestas comunidades como modelo de comportamento para outras mulheres pode ser de grande ajuda para aumentar a diversidade de gênero nestas comunidades, visto que mulheres tendem a ter uma boa resposta a este tipo de modelo~\cite{smith1986effect,nixon1999educational}. Mais ainda, saber que mulheres conseguem progredir e ter sucesso nestas comunidades pode fazer com que mulheres que apenas observam os sites se identifiquem com as outras e mudem sua percepção de o quão bem podem se adaptar, fazendo com que mudem sua opinião com relação a participar da comunidade~\cite{ehrlinger2003chronic}.
 
-% An interesting perspective on these results is that the realization of how active participating women are in these communities is a knowledge that can be leveraged to foster women participation there. Women tend to respond well to role models~\cite{smith1986effect, nixon1999educational}, though present women contributors found on these communities may be used as role models to encourage women who are presently lurking. Also, knowing that women can get along on these communities may influence women's perception of how well they can perform, thereafter changing their willing to participate on the community~\cite{ehrlinger2003chronic}.
-
-Um aspecto interessante destes resultados é a percepção de quão ativas mulheres podem ser nestas comunidades. Este fato pode ser aproveitado para incentivar a participação de mulheres nestes sites. Apresentar as contribuidoras que encontramos nestas comunidades como modelo de comportamento para outras mulheres pode ser de grande ajuda para aumentar a diversidade de gênero nestas comunidades, visto que mulheres tendem a ter uma boa resposta a este tipo de modelo~\cite{smith1986effect,nixon1999educational}. Mais ainda, saber que mulheres conseguem progredir e ter sucesso nestas comunidades pode fazer com que mulheres que apenas observam os sites se identifiquem com as outras e mudem sua percepção de o quão bem podem se adaptar, fazendo com que mudem sua opinião com relação a participar da comunidade.~\cite{ehrlinger2003chronic}.
-
-% In brief, our study results contradict several common beliefs and part of the prior research related to gender, STEM and online Question and Answer communities. This seems like a pertinent reminder that the gender gap is a problem that can appear in many forms and a single solution is not enough. In our case, there seems to exist a barrier to start contributing or display oneself as a women, and sometimes for women to remain engaged. Differently, less effort seems needed to have women contributors participate further while engaged. 
-
-Em resumo, nosso estudo contradiz várias crenças comuns, além algumas pesquisas anteriores relacionadas a gêneros, \emph{STEM} e sites de perguntas e respostas. Isso nos parece como um reforço pertinente que o problema da disparidade de gênero pode aparecer em várias formas e não existe uma solução única para todas as versões do problema. Em nosso caso, parece que mulheres precisam enfrentar uma barreira para começar a contribuir ou para se identificar como mulher nestas comunidades. E, às vezes, uma barreira até em continuar contribuindo uma vez engajada ao site. Contudo, menos esforço parece ser necessário para manter a contribuição proveniente de mulheres já engajadas.
-
-% Finally, it is important to remark that the knowledge about the precise differences in contribution behavior for men and women should not only lead to reduce disparity on women proportion in Q\&A sites. By allowing for that and increasing their participation on these communities, this should also pave the way for increasing diversity in general, accounting for other minorities.
+Em resumo, nosso estudo contradiz várias crenças comuns, além algumas pesquisas anteriores relacionadas a gêneros, \emph{STEM} e sites de perguntas e respostas. Isso nos soa como um reforço pertinente que o problema da disparidade de gênero pode aparecer de várias formas e não existe uma solução única para todas as versões do problema. Em nosso caso, observamos que mulheres precisam enfrentar uma barreira para começar a contribuir ou para se identificar como mulher nestas comunidades. Às vezes, uma barreira até em continuar contribuindo uma vez engajada ao site. Contudo, menos esforço parece ser necessário para manter a contribuição proveniente de mulheres já engajadas.
 
 Por fim, é importante notar que o conhecimento preciso das diferenças comportamentais entre homens e mulheres com relação às contribuições para sites de perguntas e respostas não é só relevante para reduzir a disparidade na proporção de mulheres nestas comunidades. Esperamos que este estudo também sirva como arcabouço para iniciar e melhorar estudos de diferenças entre outras minorias e assim aumentar a diversidade de forma geral em comunidades de perguntas e respostas.
 
+\section{Limitações}
+\label{ch:limites}
+Apesar de todas as resoluções as quais chegamos nesta pesquisa, ela não é completa. Uma pesquisa qualitativa soa como um bom começo para complementar as análises que começamos aqui. Outrossim, adicionar mais fatores relacionados à participação pode ajudar a ampliar a visão que temos da situação.
+
+Quanto à inferência de gênero, limitamos nossa amostra àqueles usuários que identificaram a si mesmo com nomes contidos no \emph{Global Name Data}. Esta abordagem pode ter descartado usuários de outros países cujos nomes não são comuns nos registros de nascimento dos Estados Unidos e Reino Unido. Uma pesquisa futura poderia realizar as mesmas comparações que fizemos, mas utilizando um outro método de identificação de gênero, como a foto do perfil do usuário.
+
+Embora nossa amostra contenha sites com uma diversidade significativamente de temas, todos eles pertencem a uma mesma plataforma: o \emph{StackExchange}. Comparar nossos resultados com outros sites que tenham um propósito similar, mas um design diferente pode ajudar a entender melhor a relação entre o design do site, a diversidade de gêneros da comunidade e o comportamento de seus usuários.
+
+Finalmente, nossa abordagem quantitativa e conjunto de dados usado não nos permite investigar profundamente quanto às razões de várias diferenças e similaridades encontradas. Acreditamos ser necessário e oportuno realizar um estudo qualitativo que complementasse nossa iniciativa.
