--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -2,45 +2,45 @@
 \chapter{Discussão}
 \label{ch:discussao}
 
-Neste capítulo iremos comentar os resultados obtidos no nosso experimento e associá-los à literatura relacionada ao estudo aqui descrito. Dividimos nossos pensamentos entre as semelhanças e diferenças encontradas e, apesar da importância do primeiro tópico, focamos nas diferenças por estas serem mais controversas.
+Neste capítulo iremos comentar os resultados obtidos no nosso experimento e associá-los à literatura relacionada ao estudo aqui descrito. Dividimos nossos resultados entre as semelhanças e diferenças encontradas e, apesar da importância do primeiro tópico, focamos nas diferenças por estas serem mais controversas.
 
 \section{As semelhanças}
 
 Nossa expectativa ao observar contribuições individuais de usuários de diferentes gêneros era que mulheres, por serem uma minoria, iriam participar menos destes sites, assim como na \emph{Wikipedia}~\cite{antin2011gender} e comunidades \emph{FOSS}~\cite{rustad2011suck}. Contudo, o que encontramos não foram diferenças, mas uma grande equivalência entre o comportamento de homens e mulheres nos sites estudados. 
 
-No geral, saber que mulheres contribuem de maneira similar aos homens na maioria dos sites aponta que uma mulher que se cadastrar em um site aleatório do \emph{StackExchange} provavelmente irá encontrar um ambiente que não a estimule a contribuir menos ou menos frequentemente que os homens. Estes resultados aparentam inesperados visto a pequena proporção de mulheres na maioria dos sites.
+No geral, saber que mulheres contribuem de maneira similar aos homens na maioria dos sites aponta que uma mulher que se cadastrar em um site aleatório do \emph{StackExchange} provavelmente irá encontrar um ambiente que não a estimule a contribuir menos ou menos frequentemente que os homens. Tal resultado é animador visto que, apesar da pequena proporção de mulheres nestas comunidades, o comportamento das mesmas não segue a linha das pesquisas anteriores onde mulheres contribuem menos que homens quando estão em minoria.
 
 \section{As diferenças}
 
-Tendo em mente todo o estereótipo em \emph{STEM} que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria baixa contribuição. Ademais, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem \emph{feedback} negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer de que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
+Tendo em mente todo o estereótipo em \emph{STEM} que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria baixa contribuição. Ademais, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem \emph{feedback} negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
 
-Contudo, não é isso que acontece. Na maioria dos sites, mulheres produzem conteúdo de tão boa qualidade quanto homens, segundo a visão da comunidade. Vemos que estas mulheres contribuem bastante com perguntas e comentários, tendo uma frequência de contribuições muitas vezes maiores que a de homens. 
+Contudo, não é isso que acontece. Na maioria dos sites, mulheres produzem conteúdo de tão boa qualidade quanto homens, segundo a visão da comunidade. Vemos que estas mulheres contribuem bastante com perguntas e comentários, tendo uma frequência de contribuições muitas vezes maior que a de homens. 
 
 % Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} esta proporção é invertida. Inclusive, mulheres respondem menos nos quatro maiores e mais antigos sites da plataforma: StackOverflow, SuperUser, SeverFault e Mathematics. Mais ainda, em praticamente todas as comunidades que observamos diferença estatística quanto ao tempo de vida, homens passavam mais tempo na comunidade.
 
 % Quanto ao tempo de vida de mulheres nestas comunidades, nota-se que a diferença de tempo é maior em comunidades mais antigas, vide tabela \ref{table:lifetime}. Isso pode se dar por que tais comunidades, a exemplo do StackOverflow, foram criadas por um grupo de homens e se mantiveram assim por bastante tempo, até se tornarem popular. Este grupo de usuários provavelmente tem um tempo de vida bem maior do que as mulheres que eventualmente ingressaram na comunidade. 
 
-Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} isto não acontece. Mulheres contribuem com menos respostas do que homens em todos os quatro maiores e mais antigos sites da plataforma: \emph{StackOverflow}, \emph{SuperUser}, \emph{SeverFault} e \emph{Mathematics}. Se estes sites influenciam mulheres a participarem menos no processo de resposta, a grandeza deles pode implicar que um grande número de mulheres estão contribuindo menos respostas do que poderiam estar. Sabendo que existem sites em outras categorias onde mulheres comuns respondem mais do que homens, nossos resultados sugerem que há um fator característico em alguns sites -- e provavelmente à comunidade -- atuando no comportamento das mulheres quanto às suas contribuições. A visível e gritante diferença no tempo de vida entre homens e mulheres nestas comunidades complementa este pensamento (ver Tabela~\ref{table:lifetime}).
+Por outro lado, apesar de mulheres responderem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas à \emph{STEM} isto não acontece. Mulheres contribuem com menos respostas do que homens em todos os quatro maiores e mais antigos sites da plataforma: \emph{StackOverflow}, \emph{SuperUser}, \emph{SeverFault} e \emph{Mathematics}. Se estes sites influenciam mulheres a participar menos no processo de resposta, a grandeza deles pode implicar que um grande número de mulheres está contribuindo com menos respostas do que poderia estar. Sabendo que existem sites em outras categorias nas quais mulheres comuns respondem mais do que homens, nossos resultados sugerem que há um fator característico em alguns sites -- e provavelmente à comunidade -- atuando no comportamento das mulheres quanto às suas contribuições. A ampla diferença no tempo de vida entre homens e mulheres nestas comunidades complementa este pensamento (ver Tabela~\ref{table:lifetime}).
 
-Uma característica comum a algumas comunidades relacionadas a \emph{STEM} do \emph{StackExchange} é que elas são ramos do \emph{StackOverflow} que foi criada por um grupo de homens e se manteve assim por bastante tempo, até se tornar popular. É provável que este grupo de homens tenham sua própria cultura dentro do \emph{StackOverflow}, com seus valores e práticas que não sejam amigáveis às mulheres, e esta cultura tenha passado para os demais sites, fazendo com que estes sejam sites com características sociais que não atraiam as mulheres.
+Uma característica comum a algumas comunidades relacionadas à \emph{STEM} do \emph{StackExchange} é que elas são ramos do \emph{StackOverflow} que foi criada por um grupo de homens e se manteve assim por bastante tempo, até se tornar popular. É provável que este grupo de homens tenha sua própria cultura dentro do \emph{StackOverflow}, com seus valores e práticas que não sejam amigáveis às mulheres, e esta cultura tenha passado para os demais sites, fazendo com que estes sejam sites com características sociais que não atraiam as mulheres.
 
-Nosso resultado se alinha com o de Yang \textit{et al}.~\cite{yang2010activity}, que apesar de não estudar a mesma comunidade de perguntas e respostas, defendeu que usuários que têm o tempo de vida maior na comunidade preferem responder à perguntar. No nosso estudo, verificamos que estes usuários são geralmente homens, assim como entendeu Vasilescu \textit{et al}.~\cite{Vasilescu27092013}. Vasilescu \textit{et al} considera este resultado insalubre para a comunidade, visto que bons contribuidores estão deixando a comunidade. Nós acreditamos que exista uma barreira para que mulheres continue contribuindo, podendo ser desde a aquisição, por parte delas, do pensamento de que não são capazes de contribuir, até por perseguições/assédios dentro da própria comunidade por parte dos outros usuários. Estas hipóteses, contudo, pedem uma investigação mais detalhada, fora do escopo desta pesquisa.
+Nosso resultado se alinha com o de Yang \textit{et al}.~\cite{yang2010activity}, que apesar de não estudar a mesma comunidade de perguntas e respostas, defendeu que usuários que têm o tempo de vida maior na comunidade preferem responder à perguntar. No nosso estudo, verificamos que estes usuários são geralmente homens, assim como entenderam Vasilescu \textit{et al}.~\cite{Vasilescu27092013}. Vasilescu \textit{et al} consideram este resultado insalubre para a comunidade, visto que bons contribuidores estão deixando a comunidade. Nós acreditamos que exista uma barreira para que mulheres continuem contribuindo, podendo ser desde a aquisição, por parte delas, do pensamento de que não são capazes de contribuir, até por perseguições/assédios dentro da própria comunidade por parte dos outros usuários. Estas hipóteses, contudo, pedem uma investigação mais detalhada, fora do escopo desta pesquisa.
 
 Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. No mais, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa não chegue a tentar realizar tal atividade. Mulheres acham que não são boas em tarefas sobre ciência e isso as influencia a não participar do campo~\cite{ehrlinger2003chronic}. Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre \emph{STEM}, mas elas se dão tão bem quanto homens na maioria delas.
 
 % Uma justificativa para mulheres responderem menos em comunidades de \emph{STEM} pode ser a de que respostas podem ser consideradas mais competitivas do que perguntas. Afinal, todas as respostas passam por um "processo seletivo" para ser a melhor resposta de uma determinada pergunta, o que não acontece com perguntas nem comentários. Já se sabe que mulheres não se dão bem em ambientes competitivos, principalmente quando precisam competir com homens~\cite{gneezy2003performance}, e tendem a evitá-los~\cite{niederle2005women,croson2009gender}. Além de que, demonstrar conhecimento em um assunto desta área pode exigir uma auto-confiança no campo que mulheres não têm.
 
-Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo a comunidade \emph{UX} (\textit{user experience}) cujas variáveis podem ser observadas na Figura~\ref{fig:ux}, mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
+Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo a comunidade \emph{UX} (\textit{user experience}), cujas variáveis podem ser observadas na Figura~\ref{fig:ux}, mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
 
 \begin{figure}
   \centering
   \includegraphics[height=0.65\paperheight]{figures/ux.pdf}
-  \caption[Distribuição das variáveis para o site \emph{User Experience}]{Distribuição das variáveis para o site \emph{User Experience}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }~\label{fig:ux}
+  \caption[Distribuição das variáveis para o site \emph{User Experience}]{Distribuição das variáveis para o site \emph{User Experience}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas.}~\label{fig:ux}
 \end{figure}
 
-Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
+Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança de que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades nas quais elas são maioria~\cite{powell2010gender}.
 
-No geral, nossos resultados mostram que a maioria dos sites do \emph{StackExchange} possuem comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, considerando a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas as barreiras são mais expressivas nas maiores comunidades relacionadas a \emph{STEM}, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos, juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades, requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
+No geral, nossos resultados mostram que a maioria dos sites do \emph{StackExchange} possui comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, considerando a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas as barreiras são mais expressivas nas maiores comunidades relacionadas à \emph{STEM}, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos, juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades, requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
 
 
 % Esse parágrafo é interessante, mas não acho que cabe aqui.
