--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -140,7 +140,7 @@ showstringspaces=false
 \selectlanguage{portuges}
 
 \Sumario
-% \ListadeSimbolos
+\ListadeSimbolos
 \listoffigures
 \listoftables
 % \lstlistoflistings %lista de codigos fonte - Para inserir a listagem de codigos fonte
@@ -155,7 +155,7 @@ showstringspaces=false
 % nao estao no dicionario portugues.
 % As palavras do dicionario portugues ja sao separadas corretamente pelo lateX
 %
-\hyphenation{ Hardware Software etc StackExchange StackOverflow}
+\hyphenation{ Hardware Software etc StackExchange StackOverflow collaborative}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -165,7 +165,7 @@ showstringspaces=false
 %% \input{cap1} 
 %% \input{cap2}
 \input{introducao}
-\input{contexto}
+\input{contexto} 
 \input{revisao}
 \input{metodos}
 \input{resultados}
