--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -558,3 +558,35 @@
   year={2004},
   organization={ACM}
 }
+
+@misc{wikipedia:stackexchange,
+  howpublished = {Website},
+  title =        {Wikipedia - StackExchange},
+  note =         {Retrieved August 13, 2015 from
+                  \url{https://en.wikipedia.org/wiki/Stack_Exchange}},
+  annote =       {Website}
+}
+
+@misc{wikipedia:stackoverflow,
+  howpublished = {Website},
+  title =        {Wikipedia - StackOverflow},
+  note =         {Retrieved August 13, 2015 from
+                  \url{https://en.wikipedia.org/wiki/Stack_Overflow}},
+  annote =       {Website}
+}
+
+@misc{stackexchange,
+  howpublished = {Website},
+  title =        {About Stackexchange},
+  note =         {Retrieved August 13, 2015 from
+                  \url{http://stackexchange.com/about}},
+  annote =       {Website}
+}
+
+@misc{wikipedia:history,
+  howpublished = {Website},
+  title =        {History of Wikipedia},
+  note =         {Retrieved August 13, 2015 from
+                  \url{https://en.wikipedia.org/wiki/History_of_Wikipedia#Historical_overview}},
+  annote =       {Website}
+}
