--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -2,49 +2,49 @@
 \chapter{Literatura}
 \label{ch:literatura}
 
-Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista que vê as causas na biologia e o Constructo Social que vê as causas no meio, o qual é considerado \emph{male-friendly} (propício aos homens) mas não \emph{female-friendly} (propício às mulheres). Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
+Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista, que vê as causas na biologia e o Constructo Social, que vê as causas no meio, o qual é considerado \emph{male-friendly} (propício aos homens) mas não \emph{female-friendly} (propício às mulheres). Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
 
-Nesta pesquisa estudamos gênero como fator social, como as pessoas se identificam, e não como fator biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Também generalizamos e estudamos apenas os dois extremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
+Na pesquisa aqui descrita estudamos gênero como fator social, como as pessoas se identificam, e não como fator biológico. Portanto usaremos o termo "gênero" ao invés de "sexo". Também generalizamos e estudamos apenas os dois extremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
 
 \section{Diferenças de gênero em comunidades online}
 
-O comportamento de homens e mulheres em comunidades online nem sempre é o mesmo. Podemos observar diferenças desde quanto ao uso da própria internet~\cite{hargittai2006differences} já que mulheres julgam sua eficiência online como sendo baixa e isto influencia as tarefas escolhidas para serem efetuadas online. Outro fator que podemos notar diferença é quanto a linguagem usada online. Esta última pode influenciar na visão que cada gênero tem  de quão relevante e útil é o conteúdo da comunidade. Em outras palavras, a percepção de qualidade da comunidade~\cite{Gefen:2005:YSS:1066149.1066156}. 
+O comportamento de homens e mulheres em comunidades online nem sempre é o mesmo. Podemos observar diferenças desde quanto ao uso da própria internet já que mulheres julgam sua eficiência online como sendo baixa e isto influencia as tarefas escolhidas para serem efetuadas online~\cite{hargittai2006differences}. Outro fator que podemos notar diferença é quanto à linguagem usada online. Esta última pode influenciar na visão que cada gênero tem  de quão relevante e útil é o conteúdo da comunidade. Em outras palavras, a percepção de qualidade da comunidade~\cite{Gefen:2005:YSS:1066149.1066156}. 
 
-Em ambientes de aprendizado online, homens interagem mais com o ambiente e enviam mensagens mais longas, com um contexto mais social, do que as mulheres. Estas tendem a ter uma participação mais pontual e relacionada com o tema das aulas, mostrando que as mulheres tendem a ser mais cuidadosas com o conteúdo que postam online, prezando por qualidade e pontualidade~\cite{barrett1999gender}. Já na \emph{Wikipedia}, apesar de homens e mulheres terem comportamentos de contribuição similares, as mulheres são as que produzem contribuições mais longas~\cite{glott2010wikipedia}.
+Em ambientes de aprendizado online, homens interagem mais com o ambiente e enviam mensagens mais longas, com um contexto mais social, que as mulheres. Estas tendem a ter uma participação mais pontual e relacionada ao tema das aulas, mostrando que as mulheres tendem a ser mais cuidadosas com o conteúdo que postam online, prezando por qualidade e pontualidade~\cite{barrett1999gender}. Na \emph{Wikipedia}, apesar de homens e mulheres terem comportamentos de contribuição similares, as mulheres são as que produzem contribuições mais longas~\cite{glott2010wikipedia}.
 
-O \emph{IRC}(\emph{Internet Relay Chat}) é um meio de comunicação online que foi muito popular nos anos 2000. Seu funcionamento é simples: usuários escolhem um \emph{nick}, se conectam ao servidor de sua preferência e podem conversar com grupos de pessoas de uma só vez nos \emph{canais} ou com apenas uma no \emph{privativo}. Hoje, apesar de contarmos com servidores e canais sobre os mais diversos assuntos, a maior parte deles são dedicados às comunidades \emph{Open Source} de desenvolvimento de software. Quanto a questão de gênero no \emph{IRC}, foi encontrado que, em canais de \emph{IRC} sobre diversos assuntos, usuários que apresentam um pseudônimo feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com pseudônimo masculinos e 4 vezes mais que usuários com pseudônimos que não se identificava o gênero~\cite{meyer2006assessing}. Isto pode ser um dos motivos pelo qual mulheres não participam tanto quanto homens deste tipo de comunidade. 
+O \emph{IRC} (\emph{Internet Relay Chat}) é um meio de comunicação online que foi muito popular nos anos 2000. Seu funcionamento é simples: usuários escolhem um \emph{nick}, se conectam ao servidor de sua preferência e podem conversar com grupos de pessoas de uma só vez nos \emph{canais} ou com apenas uma no \emph{privativo}. Hoje, apesar de contarmos com servidores e canais sobre os mais diversos assuntos, a maior parte deles é dedicada às comunidades \emph{Open Source} de desenvolvimento de software. Quanto à questão de gênero no \emph{IRC}, foi encontrado que, em canais de \emph{IRC} sobre diversos assuntos, usuários que apresentam um pseudônimo feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com pseudônimo masculinos e 4 vezes mais que usuários com pseudônimos que não se identificava o gênero~\cite{meyer2006assessing}. Isto pode ser um dos motivos pelo qual mulheres não participam tanto quanto homens deste tipo de comunidade. 
 
-Interessante comparar este resultado encontrado no \emph{IRC}, que, teoricamente, não foi projetado especificamente para homens utilizarem com comunidades \emph{MMORPG} (\emph{Massively multiplayer online role-playing game}) -- comunidades de jogos online -- onde tais jogos foram explicitamente criadas por homens e para homens. Observou-se que estas comunidades que são conhecidas por não serem \textit{female-friendly} e serem cenário de inúmeros casos de perseguição às mulheres, registraram um crescimento na proporção de mulheres participantes, este número chegando até a ser maior que o de homens~\cite{taylor2003multiple}. Mostrando assim que, quando há o interesse, mulheres conseguem sim \emph{sobreviver} em comunidades que apresentam um ambiente hostil a elas.
+Interessante comparar este resultado encontrado no \emph{IRC}, que, teoricamente, não foi projetado especificamente para homens utilizarem com comunidades \emph{MMORPG} (\emph{Massively multiplayer online role-playing game}) -- comunidades de jogos online -- onde tais jogos foram explicitamente criadas por homens e para homens. Observou-se que estas comunidades que são conhecidas por não serem \textit{female-friendly} e serem cenário de inúmeros casos de perseguição às mulheres, registraram um crescimento na proporção de mulheres participantes, este número chegando até a ser maior que o de homens~\cite{taylor2003multiple}. Isso mostrando que, quando há o interesse, mulheres conseguem sim \emph{sobreviver} em comunidades que apresentam um ambiente hostil a elas.
 
-Contudo, a situação torna-se preocupante quando observamos resultados de pesquisas em comunidades online profissionais, já que estas podem refletir o que acontece fora do mundo virtual. Em comunidades \textit{Free Open Source} (\emph{FOSS}) -- comunidades de desenvolvimento de software livre e gratuito -- a proporção de mulheres contribuintes não passa de 5\%, sendo a média 2\%. Ademais, membros destas comunidades tendem a associar a culpa pela baixa proporção de mulheres a falta de interesse por parte delas, esquecendo os tantos casos de preconceito implícito e explícito divulgados em \emph{blogs} e pela própria imprensa~\cite{rustad2011suck}. Tais preconceitos podem aparecer de diversas formas: desde de mensagens entre os contribuidores até palestras que incluem mensagens que menosprezam mulheres. Não é para menos que, assim como a proporção de mulheres é baixa, seu tempo de vida nestas comunidades não é alto.
+Contudo, a situação torna-se preocupante quando observamos resultados de pesquisas em comunidades online profissionais, já que estas podem refletir o que acontece fora do mundo virtual. Em comunidades \textit{Free Open Source} (\emph{FOSS}) -- comunidades de desenvolvimento de software livre e gratuito -- a proporção de mulheres contribuintes não passa de 5\%, sendo a média 2\%. Ademais, membros destas comunidades tendem a associar a culpa pela baixa proporção de mulheres à falta de interesse por parte delas, esquecendo os tantos casos de preconceito implícito e explícito divulgados em \emph{blogs} e pela própria imprensa~\cite{rustad2011suck}. Tais preconceitos podem aparecer de diversas formas: desde de mensagens entre os contribuidores até palestras que incluem mensagens que menosprezam mulheres. Não é para menos que, assim como a proporção de mulheres é baixa, seu tempo de vida nestas comunidades não é alto.
 
-Por fim, encontramos apenas um estudo dedicado a gênero e comunidades do \emph{StackExchange}. Vasilescu \emph{et al} estudaram a maior e mais antiga comunidade da plataforma, a \emph{StackOverlow}, quanto a alguns aspectos da participação de homens e mulheres no site. Os resultados não são animadores: foi observado que mulheres são uma pequena minoria dentre os usuários e homens dedicam-se mais tempo à comunidade do que as mulheres. Resultados similares aos encontrados em comunidades \emph{FOSS}. Pode-se afirmar que estes resultados já eram esperados, visto os relatos espalhados por toda a internet, mas colocando em números, o problema parece ser mais grave e, aparentemente, sem uma explicação exata.
+Por fim, encontramos apenas um estudo dedicado a gênero e comunidades do \emph{StackExchange}. Vasilescu \emph{et al}~\cite{Vasilescu27092013} estudaram a maior e mais antiga comunidade da plataforma, a \emph{StackOverlow}, quanto a alguns aspectos da participação de homens e mulheres no site. Os resultados não são animadores: foi observado que mulheres são uma pequena minoria dentre os usuários e homens dedicam mais tempo à comunidade que as mulheres. Resultados similares aos encontrados em comunidades \emph{FOSS}\cite{rustad2011suck,powell2010gender}. Pode-se afirmar que estes resultados já eram esperados, visto os relatos espalhados por toda a internet, mas colocando em números, o problema parece ser mais grave e, aparentemente, sem uma explicação exata.
 
 \bigskip
 
-Em resumo, não podemos generalizar o comportamento de mulheres para todas as comunidades online, mesmo que elas tenham designs similares e propósitos iguais. E, como todas as comunidades podem se beneficiar de usuários mais diversos, é importante estudar o comportamento de cada uma para ser possível sugerir soluções para o problema do \textit{gender gap}.
+Em resumo, não podemos generalizar o comportamento de mulheres para todas as comunidades online, mesmo que elas tenham designs similares e propósitos iguais. Como todas as comunidades podem se beneficiar de usuários mais diversos, é importante estudar o comportamento de cada uma para ser possível sugerir soluções para o problema do \textit{gender gap}.
 
 \section{\emph{Feedback} e competitividade}
 
-\emph{Feedback} mostra-se como uma ferramenta que influi bastante no comportamento dos usuários em comunidades online. Sabe-se que \emph{feedback} negativo pode trazer um efeito indesejado à comunidade, fazendo com os que o recebem mantenham-se ativos e produzindo conteúdo de baixa qualidade~\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem \emph{feedback} negativo tendem a dar \emph{feedback} negativo para os demais usuários indiscriminadamente. Em contra partida, na \emph{Wikipedia}, acredita-se que \emph{feedbacks} positivos são um fator importante na motivação de mulheres a participar da comunidade visto que este aumenta a auto-estima delas quanto ao seu conhecimento no assunto da contribuição~\cite{collier2012conflict}.
+\emph{Feedback} mostra-se como uma ferramenta que influi bastante no comportamento dos usuários em comunidades online. Sabe-se que \emph{feedback} negativo pode trazer um efeito indesejado à comunidade, fazendo com os que o recebem mantenham-se ativos e produzindo conteúdo de baixa qualidade~\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem \emph{feedback} negativo tendem a dar \emph{feedback} negativo para os demais usuários indiscriminadamente. Em contrapartida, na \emph{Wikipedia}, acredita-se que \emph{feedbacks} positivos são um fator importante na motivação de mulheres a participar da comunidade, visto que este aumenta a auto-estima delas quanto ao seu conhecimento no assunto da contribuição~\cite{collier2012conflict}.
 
-Com relação à competitividade, estudos em laboratório mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com o gênero oposto~\cite{gneezy2003performance}. As comunidades do \emph{StackExchange} podem ser vistas como ambientes competitivos, visto que as respostas passam por um processo seletivo para cada pergunta. É possível que um baixo desempenho das mulheres nestas comunidades possa ser frustrante e levá-las a sair cedo da comunidade. Ademais, é interessante notar que, enquanto a maioria das mulheres as evitam, homens sentem-se confortáveis em competições~\cite{niederle2005women,croson2009gender}.
+Com relação à competitividade, estudos em laboratório mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com o gênero oposto~\cite{gneezy2003performance}. As comunidades do \emph{StackExchange} podem ser vistas como ambientes competitivos, visto que as respostas passam por um processo seletivo para cada pergunta. É possível que um baixo desempenho das mulheres nestas comunidades possa ser frustrante e levá-las a sair cedo da comunidade. Ademais, nota-se que, enquanto a maioria das mulheres as evitam, homens sentem-se confortáveis em competições~\cite{niederle2005women,croson2009gender}.
 
 \section{Mulheres, \emph{STEM} e autoconfiança}
 
-Sabe-se que a disciplina matemática é base para muitos dos campos em \emph{STEM}. Por isso, vários estudiosos quando tentam entender as diferenças entre gêneros em \emph{STEM}, recorrem à matemática para realizar experimentos. Tais estudos mostram que mulheres têm performance tão boa quanto a de homens em atividades de matemática~\cite{hyde1990gender,campbell1986effects}, apesar da baixa autoconfiança que mulheres têm na sua capacidade cognitiva em matemática e do forte pensamento, principalmente por parte dos homens, de que matemática é uma disciplina masculina.Tais estigmas e estereótipos se tornam impraticáveis já que outros estudos mostram que mulheres costumam ter notas melhores em disciplinas relacionadas à \emph{STEM}~\cite{stoet2015sex} e que já se sabe que a performance das mulheres neste campo não depende de igualdade política, econômica ou social~\cite{stoet2015sex}. 
+Sabe-se que a disciplina matemática é base para muitos dos campos em \emph{STEM}. Por isso, vários estudiosos quando tentam entender as diferenças entre gêneros em \emph{STEM}, recorrem à matemática para realizar experimentos. Tais estudos mostram que mulheres têm performance tão boa quanto à de homens em atividades de matemática~\cite{hyde1990gender,campbell1986effects}, apesar da baixa autoconfiança que mulheres têm na sua capacidade cognitiva em matemática e da forte convicção, principalmente por parte dos homens, de que matemática é uma disciplina masculina. Tais estigmas e estereótipos se tornam impraticáveis já que outros estudos mostram que mulheres costumam ter notas melhores em disciplinas relacionadas à \emph{STEM}~\cite{stoet2015sex} e que já se sabe que a performance das mulheres neste campo não depende de igualdade política, econômica ou social~\cite{stoet2015sex}. 
 
-Contudo, o estereótipo de que mulheres são menos competentes em campos relacionados a \emph{STEM} é bem visível e documentado. Por exemplo, Moss \emph{et al}, ao estudar o processo de seleção de contratação de pesquisadores para universidades, observou que mesmo obtendo currículos idêntico aos dos seus colegas do sexo masculino, mulheres não eram escolhidas por serem consideradas menos competentes. Ademais, aquelas mulheres que conseguiam a vaga, muitas vezes tinham um salário inicial menor do que os seus colegas com habilidades similares.~\cite{moss2012science}
+Contudo, o estereótipo de que mulheres são menos competentes em campos relacionados a \emph{STEM} é bem visível e documentado. Por exemplo, Moss \emph{et al}~\cite{moss2012science}, ao estudar o processo de seleção de contratação de pesquisadores para universidades, observou que mesmo obtendo currículos idêntico aos dos seus colegas do sexo masculino, mulheres não eram escolhidas por serem consideradas menos competentes. Ademais, aquelas mulheres que conseguiam a vaga, muitas vezes tinham um salário inicial menor que o dos seus colegas com habilidades similares~\cite{moss2012science}.
 
 \bigskip
 
-Apesar do seu potencial, mulheres ainda são minoria em campos relacionados a \emph{STEM} que acredita-se que é necessário um talento inato para poder alcançar o sucesso na área~\cite{leslie2015expectations}. Este é o caso de Ciência da Computação e Filosofia, por exemplo. O motivo para que isto aconteça pode ser a crença por parte de ambos os gêneros que mulheres não possuem tal talento~\cite{tiedemann2000gender,kirkcaldy2007parental}. Apesar de que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres~\cite{hyde2005gender}. 
+Apesar do seu potencial, mulheres ainda são minoria em campos relacionados à \emph{STEM} que acredita-se que é necessário um talento inato para poder alcançar o sucesso na área~\cite{leslie2015expectations}. Este é o caso de Ciência da Computação e Física, por exemplo. O motivo para que isto aconteça pode ser a crença por parte de ambos os gêneros de que mulheres não possuem tal talento~\cite{tiedemann2000gender,kirkcaldy2007parental}. Porém, não foi provado ainda que esse "talento inato" \ é exclusivo de homens ou mulheres~\cite{hyde2005gender}. 
 
-Tais estereótipos de mulheres serem menos habilidosas ou que não possuem um talento inato para disciplinas e atividades relacionadas a \emph{STEM} é extremamente danoso, não só para a carreira das mulheres, mas para a comunidade acadêmica e profissional no geral que pode sofrer com a falta de diversidade dentro do ambiente de estudo / trabalho. Mais ainda, estudos mostram que se mulheres absorverem este estereótipo, elas podem achar que estes campos não são para elas~\cite{wigfield2000expectancy,shapiro2011major}, o que não é verdade, visto os resultados de estudos que compararam o desempenho de pessoas de ambos os gêneros em atividades de matemática e \emph{STEM}~\cite{stoet2015sex,hyde1990gender,campbell1986effects}.
+Tais estereótipos de que mulheres são menos habilidosas ou que não possuem um talento inato para disciplinas e atividades relacionadas à \emph{STEM} é extremamente danoso, não só para a carreira das mulheres, mas para a comunidade acadêmica e profissional no geral que pode sofrer com a falta de diversidade dentro do ambiente de estudo / trabalho. Mais ainda, estudos mostram que se mulheres absorverem este estereótipo, elas podem achar que estes campos não são para elas~\cite{wigfield2000expectancy,shapiro2011major}, o que não é verdade, visto os resultados de estudos que compararam o desempenho de pessoas de ambos os gêneros em atividades de matemática e \emph{STEM}~\cite{stoet2015sex,hyde1990gender,campbell1986effects}.
 
-O problema parece estar na falta de auto confiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e filosofia~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa autoconfiança em tarefas de ciências, se comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a \emph{Wikipedia}, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
+O problema parece estar na falta de autoconfiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e física~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa autoconfiança em tarefas de ciências, se comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a \emph{Wikipedia}, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
 
-Ademais, o número baixo de mulheres em \emph{STEM} parece influenciar outras mulheres a não se envolver na área: o fato de outras mulheres não escolherem um determinado campo pode ser um sinal de que ele não seja bom para mulheres no geral~\cite{shapiro2011major}. Contudo, mulheres tendem a não considerar seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mais ainda, estudos apontam que mulheres que têm contato com modelos em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
+Ademais, o número baixo de mulheres em \emph{STEM} parece influenciar outras mulheres a não se envolver na área: o fato de outras mulheres não escolherem um determinado campo pode ser um sinal de que ele não seja bom para mulheres no geral~\cite{shapiro2011major}. Contudo, mulheres tendem a não levar em consideração seu gênero quando decidem se querem seguir carreira em Ciência da Computação. Ao invés, condições culturais e o ambiente onde irão trabalhar são os fatores mais influentes em sua escolha~\cite{blum2007cultural}. Mais ainda, estudos apontam que mulheres que têm contato com modelos em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
 
 % \section{Mulheres e carreiras em \emph{STEM}}
 
@@ -55,5 +55,5 @@ Ademais, o número baixo de mulheres em \emph{STEM} parece influenciar outras mu
 
 \section{Nossa contribuição}
 
-Considerando a literatura apresentada neste capítulo, vemos que os estudos apontam que não devemos esperar que mulheres sejam menos habilidosas que homens em tarefas relacionadas a \emph{STEM}. O ambiente em que elas trabalham ou estudam juntamente com o \emph{feedback} recebido para suas atividades mostram-se como verdadeiros fatores que influenciam o relacionamento de mulheres com campos relacionados a \emph{STEM}. Contudo, não nos restou claro a que ponto o ambiente e \emph{feedback} recebido pelas mulheres nas comunidades da plataforma \emph{StackExchange} tem influenciado na participação e performance de mulheres na construção da base conhecimento disponibilizado por estes sites, principalmente na área de \emph{STEM}. Portanto, este estudo tem como o intuito preencher essa lacuna de conhecimento, estudando as diferenças e similaridades em comportamento entre homens e mulheres nas comunidades dedicadas a diversos assuntos pertencentes a plataforma \emph{StackExchange}.
+Considerando a literatura apresentada neste capítulo, vemos que os estudos apontam que não devemos esperar que mulheres sejam menos habilidosas que homens em tarefas relacionadas à \emph{STEM}. O ambiente em que elas trabalham ou estudam juntamente com o \emph{feedback} recebido para suas atividades mostram-se como verdadeiros fatores que influenciam o relacionamento de mulheres com campos relacionados a \emph{STEM}. Contudo, não nos restou claro até que ponto o ambiente e \emph{feedback} recebido pelas mulheres nas comunidades da plataforma \emph{StackExchange} tem influenciado na participação e performance de mulheres na construção da base de conhecimento disponibilizado por estes sites, principalmente na área de \emph{STEM}. Portanto, este estudo tem como o intuito preencher essa lacuna de conhecimento, estudando as diferenças e similaridades em comportamento entre homens e mulheres nas comunidades dedicadas a diversos assuntos pertencentes à plataforma \emph{StackExchange}.
 
