--- a/modelo_copin/simbolos.tex
+++ b/modelo_copin/simbolos.tex
@@ -1,2 +1,3 @@
-UE		- \textit{Um Exemplo}\\
-OE		- \textit{Outro Exemplo}\\
+STEM	- \textit{Science, Technology, Engineering and Mathematics}\\
+IRC		- \textit{Internet Relay Chat}\\
+
