--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -2,36 +2,38 @@
 \chapter{Introdução}
 \label{ch:intro}
 
-Nos últimos anos, fontes de informação colaborativa online têm adquirido a sua importância no meio web por seu conteúdo confiável e de fácil acesso. Tais fontes nada mais são do que sites ou aplicativos que podem ser acessados via internet e todo o seu conteúdo provém dos seus usuários. Podemos destacar, dentre tantas outras, a \emph{Wikipedia}, \emph{Yahoo Answers} e os sites da plataforma \emph{StackExchange}. Estes dois últimos pertencem a uma categoria específica de fonte de informação colaborativa -- são comunidades de perguntas e respostas online. Estas comunidades são fontes de informação colaborativa online onde a toda a dinâmica de construção da informação se dá através de perguntas e respostas. A plataforma \emph{StackExchange}, foco do nosso estudo, apesar das suas mais de 100 comunidades de perguntas e respostas, destaca-se no campo de \emph{STEM} (\emph{Science, Technology, Engineering and Mathematics}), com comunidades com mais de 4 milhões de usuários. 
+Desde o seu surgimento na década de 1990~\cite{wikipedia:history}, fontes de informação colaborativa online têm adquirido a sua importância no meio web por seu conteúdo confiável e de fácil acesso. Tais fontes nada mais são do que sites ou aplicativos que podem ser acessados via internet e todo o seu conteúdo provém dos seus usuários. Podemos destacar, dentre tantas outras, a \emph{Wikipedia}, \emph{Yahoo Answers} e os sites da plataforma \emph{StackExchange}. Estes dois últimos pertencem a uma categoria específica de fonte de informação colaborativa -- são comunidades de perguntas e respostas online. Estas comunidades são fontes de informação colaborativa online onde a toda a dinâmica de construção da informação se dá a partir de de perguntas e respostas. A plataforma \emph{StackExchange}, foco do nosso estudo, apesar das suas mais de 100 comunidades de perguntas e respostas, destaca-se no campo de \emph{STEM} (\emph{Science, Technology, Engineering and Mathematics}), com comunidades com mais de 4 milhões de usuários~\cite{stackexchange}. 
 
 Sabendo que o conteúdo destas comunidades de perguntas e respostas é criado por voluntários, estes sites são extremamente dependentes da adoção e contribuição de seus usuários. Assim como a variedade no conteúdo, a diversidade de visões de um certo assunto no conteúdo da comunidade também depende da diversidade dos usuários voluntários.
 
 \section{Motivação}
 
-A motivação inicial para este estudo foi um receio por parte dos pesquisadores quanto à diversidade de gêneros ou \emph{gender gap} em comunidades online, principalmente àquelas relacionadas a \emph{STEM}. Já era de se esperar que comunidades voltadas a \emph{STEM} não apresentassem diversidade de gêneros, levando em conta os estereótipos, mas relatos recentes apontam que não são apenas estas comunidades que apresentam um déficit de mulheres. 
+A motivação inicial para este estudo foi um receio por parte dos pesquisadores quanto à diversidade de gêneros ou \emph{gender gap} em comunidades online, principalmente àquelas relacionadas a \emph{STEM}. Já era de se esperar que comunidades voltadas à \emph{STEM} não apresentassem diversidade de gêneros, levando em conta os estereótipos, mas relatos recentes apontam que não são apenas estas comunidades que apresentam um déficit de mulheres. 
 
-Com a divulgação dos relatórios de diversidade por parte de grandes companhias como \emph{Google}~\cite{google:report} e \emph{Linkedin}~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades \emph{Open Source} que apresentam números parecidos~\cite{rustad2011suck}. É possível que estes dados estejam relacionados, visto que tanto as companhias quanto as comunidades \emph{Open Source} focam no desenvolvimento de software.
+Com a divulgação dos relatórios de diversidade por parte de grandes companhias como \emph{Google}~\cite{google:report} e \emph{Linkedin}~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos este resultado às comunidades \emph{Open Source} que apresentam números parecidos~\cite{rustad2011suck}. É possível que estes dados estejam relacionados, visto que tanto as companhias quanto as comunidades \emph{Open Source} focam no desenvolvimento de software.
 
-Por fim, chegamos às comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}, chegando a representar apenas 7\& dos usuários que contribuem para o site. Ademais, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}, tendo os outros membros as acusando de preconceito. Isto é preocupante, pois existe uma problema de balanço de diversidade, não se sabe a razão e a própria comunidade não parece estar disposta a examinar causas e consequências.
+Quanto às comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}, chegando a representar apenas 7\% dos usuários que contribuem para o site. Ademais, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}, tendo os outros membros as acusando de preconceito. Isto é preocupante, pois existe um problema de balanço de diversidade, não se sabe a razão. A própria comunidade não parece estar disposta a examinar causas e consequências.
 
-Tais fatos coincidem com estereótipos comuns de mulheres em campos de \emph{STEM}~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que onde há homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do \emph{StackExchange} podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. Além de, estes sites apresentarem um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
+Por fim, notamos que, em quatro das maiores comunidades do \emph{StackExchange} relacionadas à \emph{STEM} (\emph{StackOverflow}, \emph{SuperUser}, \emph{Mathematics} e \emph{Programmers}) não foi possível identificar nenhuma mulher no ranking dos 100 maiores contribuidores destas comunidades, o que exaltou mais a nossa suspeita da falta de participação, por parte das mulheres, nas comunidades que pretendíamos estudar.
+
+Tais fatos coincidem com estereótipos comuns de mulheres em campos de \emph{STEM}~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos nos quais há homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do \emph{StackExchange} podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. Além disso estes sites apresentam melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
 
 
 \section{Objetivos}
 
-Apesar de estudos anteriores apontarem que a fração de contribuidoras é bem menor do que a de contribuidores, não resta claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Outrossim, se mulheres não contribuem menos, por menos tempo nem tem seu conteúdo avaliado como de baixa qualidade, podemos deduzir que uma campanha de ampliação da diversidade nestas comunidades deve ter seu foco diferente de apenas convocar mulheres.
+Apesar de estudos anteriores apontarem que a fração de contribuidoras é bem menor que a de contribuidores, não está claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Outrossim, se mulheres não contribuem menos, por menos tempo nem tem seu conteúdo avaliado como de baixa qualidade, podemos deduzir que uma campanha de ampliação da diversidade nestas comunidades deve ter seu foco diferente de apenas convocar mulheres.
 
-Verificamos que, dentro da literatura, não há um estudo que observe os usuários das comunidades do \emph{StackExchange} com relação às características citadas acima e ainda faça um comparativo com estudos de gênero não só no contexto de comunidades online, mas também em ambientes offline, relacionando as diferenças e semelhanças encontrados nos demais estudos com relação a interação e competitividade das pessoas de diferentes gêneros e os comportamentos observados nos sites estudados.
+Verificamos que, na literatura, não há um estudo que observe os usuários das comunidades do \emph{StackExchange} com relação às características citadas acima e ainda faça um comparativo com estudos de gênero, não só no contexto de comunidades online, mas também em ambientes offline, relacionando as diferenças e semelhanças encontrados nos demais estudos com relação à interação e à competitividade das pessoas de diferentes gêneros e aos comportamentos observados nos sites estudados.
 
-Portanto, esta pesquisa tem como objetivo estudar as consequências no comportamento de um usuário que identifica seu gênero em comunidades do \emph{StackExchange}. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade, os quais pudemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade e contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de novos registros por cada gênero, em cada comunidade, ao longo do tempo.
+Portanto, a pesquisa aqui descrita tem como objetivo estudar as consequências no comportamento de um usuário que identifica seu gênero em comunidades do \emph{StackExchange}. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade, dos quais pudemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade e contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de novos registros por cada gênero, em cada comunidade, ao longo do tempo.
 
 
 \section{Abordagem de pesquisa}
-No contexto dos sites da plataforma \emph{StackExchange}, quisemos entender melhor como se dá a diferença de comportamento entre homens e mulheres que participam da plataforma. Para isto, a primeira medida que tomamos foi a de identificar automaticamente o gênero dos usuários que contribuíram de alguma forma para qualquer um dos sites. Utilizamos um classificador para que obtivéssemos o maior número de usuários identificados de uma maneira praticável.
+No contexto dos sites da plataforma \emph{StackExchange}, quisemos entender melhor como se dá a diferença de comportamento entre homens e mulheres que participam da plataforma. Para isto, a primeira medida que tomamos foi a de identificar automaticamente o gênero dos usuários que contribuíram de alguma forma para qualquer um dos sites. Utilizamos um classificador para que obtivéssemos o maior número de usuários identificados de uma maneira rápida e confiável, na medida do possível para uma comunidade onde a maioria dos usuários é anônima.
 
-Após esta primeira etapa, procuramos entender a diferença de comportamento respondendo à seguinte pergunta de pesquisa: \emph{Como se dá (caso existente) a diferença de comportamento entre homens e mulheres nos sites do StackExchange?} E, para respondê-la, a dividimos em quatro subperguntas de pesquisa para estudar aspectos distintos do comportamento dos usuários.
+Após esta primeira etapa, procuramos entender a diferença de comportamento respondendo a seguinte pergunta de pesquisa: \emph{Como se dá (caso existente) a diferença de comportamento entre homens e mulheres nos sites do StackExchange?} E, para respondê-la, a dividimos em quatro subperguntas de pesquisa para estudar aspectos distintos do comportamento dos usuários.
 
-A primeira questão que nos vem a mente quando comparamos comportamento de contribuições é quanto ao número de contribuições realizada por cada usuário. A primeira subpergunta é \textit{O número de contribuições feitas por homens e por mulheres difere significantemente nas comunidades observadas?} Onde tivemos a oportunidade de analisar e comparar a quantidade de cada tipo de contribuição (perguntas, respostas e comentários) realizadas por cada usuário de cada gênero.
+A primeira questão que nos vem a mente quando comparamos comportamento de contribuições é quanto ao número de contribuições realizada por cada usuário. A primeira subpergunta é \textit{O número de contribuições feitas por homens e por mulheres difere significantemente nas comunidades observadas?} Foi possível analisar e comparar a quantidade de cada tipo de contribuição (perguntas, respostas e comentários) realizadas por cada usuário de cada gênero.
 
 Um aspecto importante a ser estudado é como os usuários percebem a qualidade uns dos outros, para isto temos a segunda subpergunta: \textit{As contribuições feitas por diferentes gêneros são vistas, pela comunidade, com níveis de qualidade diferentes?} E, para estudar o engajamento dos usuários, analisamos o tempo de vida na comunidade e frequência de postagem, respondendo à terceira subpergunta: \textit{O engajamento de homens e mulheres difere nas comunidades estudadas?}
 
@@ -40,15 +42,15 @@ Por fim, para estudar como as contribuições e novos registros realizados por u
 
 \section{Resultados}
 
-Nosso resultados mostram que, na maioria das comunidades estudadas, mulheres que expõem seu gênero no site, não só contribuem tanto quanto os homens, mas também têm suas contribuições vistas com o mesmo nível de qualidade e se dedicam ao site pelo mesmo período de tempo que os homens. Nas comunidades onde podemos verificar uma diferença significante entre as contribuições advindas dos dois gêneros, os padrões detectados vão de encontro com os estereótipos: na maioria das vezes, mulheres tendem a contribuir mais do que homens. Isto acontece até nas comunidades relacionadas a \emph{STEM}, inclusive na \emph{StackOverflow}, apesar de que, em nenhuma destas comunidades mulheres contribuem com mais respostas do que homens. Também conseguimos notar um crescimento na proporção de novos registros e contribuições provenientes de mulheres em várias comunidades relacionadas a \emph{STEM}.
+Nosso resultados mostram que, na maioria das comunidades estudadas, mulheres que expõem seu gênero no site, não só contribuem tanto quanto os homens, mas também têm suas contribuições vistas com o mesmo nível de qualidade e se dedicam ao site pelo mesmo período de tempo que os homens. Nas comunidades onde podemos verificar uma diferença significante entre as contribuições advindas dos dois gêneros, os padrões detectados vão de encontro aos estereótipos: na maioria das vezes, mulheres tendem a contribuir mais do que homens. Isto acontece até nas comunidades relacionadas à \emph{STEM}, inclusive na \emph{StackOverflow}, apesar de que, em nenhuma destas comunidades mulheres contribuem com mais respostas do que homens. Também conseguimos notar um crescimento na proporção de novos registros e contribuições provenientes de mulheres em várias comunidades relacionadas a \emph{STEM}.
 
-Estes resultados questionam o senso comum de que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que manifestam seu gênero, em geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e respostas, e em particular àquelas com assuntos relacionados a \emph{STEM}, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o \textit{gender gap} nestes sites. A razão pode estar relacionada à falta de auto confiança no campo por parte das mulheres, como pode ser observado em outros sistemas~\cite{piazza:report}. Mais ainda, saber que mulheres que se engajam nestes sites são tão ativas quanto o que observamos sugere que o foco na campanha a favor da diversidade de gênero nestas comunidades deve ser no recrutamento e no engajamento inicial.
+Estes resultados questionam o senso comum de que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto as dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que manifestam seu gênero, em geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e respostas, e, em particular, aquelas com assuntos relacionados à \emph{STEM}, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o \textit{gender gap} nestes sites. A razão pode estar relacionada à falta de auto confiança no campo por parte das mulheres, como pode ser observado em outros sistemas~\cite{piazza:report}. Mais ainda, saber que mulheres que se engajam nestes sites são tão ativas quanto o que observamos sugere que o foco na campanha a favor da diversidade de gênero nestas comunidades deve ser voltado ao recrutamento e ao engajamento inicial.
 
 \section{Estrutura do texto}
 
-De forma breve, descrevemos aqui a forma que toma o restante deste documento. No Capítulo~\ref{ch:contexto} apresentamos comunidades de perguntas e respostas, o contexto dessa pesquisa, apresentando sua definição e objetivos, focando principalmente no nosso objeto de pesquisa que é a plataforma \emph{StackExchange}. No Capítulo~\ref{ch:literatura} fazemos uma visão geral do que já foi estudado sobre gênero, comunidades online e a interseção entre estes estudos.
+De forma breve, descrevemos aqui a estrutura do restante deste documento. No Capítulo~\ref{ch:contexto} apresentamos comunidades de perguntas e respostas, o contexto da pesquisa, apresentando sua definição e objetivos, focando principalmente no nosso objeto de pesquisa que é a plataforma \emph{StackExchange}. No Capítulo~\ref{ch:literatura} fazemos uma visão geral do que já foi estudado sobre gênero, comunidades online e a interseção entre estes estudos.
 
-Uma descrição dos dados e metodologia utilizados neste estudo podem ser encontrados no Capítulo~\ref{ch:metodos}. No Capítulo~\ref{ch:resultados} apresentamos de forma detalhada os resultados obtidos utilizando a metodologia do Capítulo anterior e discutimos os resultados e suas implicações no Capítulo~\ref{ch:discussao}.
+Uma descrição dos dados e metodologia utilizados no estudo podem ser encontrados no Capítulo~\ref{ch:metodos}. No Capítulo~\ref{ch:resultados} apresentamos, de forma detalhada, os resultados obtidos utilizando a metodologia do Capítulo anterior e discutimos os resultados e suas implicações no Capítulo~\ref{ch:discussao}.
 
 Por fim, no Capítulo~\ref{ch:limites} apresentamos as limitações encontradas durante esta pesquisa e fechamos a descrição do estudo com o Capítulo~\ref{ch:concl}, que descreve as conclusões que chegamos e aponta caminhos para estudos futuros. Os Apêndices~\ref{app:info} à~\ref{app:q4} sumarizam e descrevem o objeto de estudo e as variáveis estudadas.
 
