--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -4,30 +4,30 @@
 
 \begin{figure}
   \includegraphics[width=1\columnwidth]{figures/perguntas_mulheres.pdf}
-  \caption[Comparação do número de perguntas]{Comparação do número de perguntas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{fig:questions}
+  \caption[Comparação do número de perguntas]{Comparação do número de perguntas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens.}~\label{fig:questions}
 \end{figure}
 
-Este capítulo apresenta os resultados para cada uma das quatro perguntas de pesquisa. Quando descrevemos as diferenças para uma determinada variável de um conjunto de sites, nós utilizamos da notação $M/S/H$, onde $M$ é o número de sites onde mulheres obtiveram valores para esta variável significantemente maiores, $S$ o número de sites onde não obteve-se diferença significante e, por fim, $H$ é o número de sites onde homens obtiveram valores significantemente maiores.
+Este capítulo apresenta os resultados para cada uma das quatro perguntas de pesquisa. Quando descrevemos as diferenças para uma determinada variável de um conjunto de sites, nós utilizamos da notação $M/S/H$, em que $M$ é o número de sites onde mulheres obtiveram valores para esta variável significativamente maiores, $S$ o número de sites onde não obteve-se diferença significativa e, por fim, $H$ é o número de sites onde homens obtiveram valores significativamente maiores. Mais ainda, nas figuras aqui apresentadas, as caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Para visualizar a distribuição em escala de log, acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. Por fim, lembramos que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras.
 
 \section{Número de contribuições}
-Para todos os tipos de contribuições considerados um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições provenientes de homens e mulheres não é significativa na maioria dos sites (teste \emph{Mann-Whitney U}, $\alpha = 0.05$)
+Para todos os tipos de contribuições considerados, um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições provenientes de homens e mulheres não é significativa na maioria dos sites (teste \emph{Mann-Whitney U}, $\alpha = 0.05$). E, mesmo para os sites onde pudemos observar diferença estatística, esta não foi grande. O estimador de Hodges-Lehmann nos indica que, para qualquer tipo de contribuição, não há diferença maior do que uma unidade de contribuição entre homens e mulheres.
 
-Dos sites em que pudemos observar uma diferença estatística significante, existe um número maior de comunidades onde podemos observar que mulheres são mais ativas que homens do que o contrário. Esta diferença é maior quando observamos o número de perguntas ($21/62/2$), seguido pelo número de respostas ($18/56/11$) e, finalmente, o número total de contribuições($10/73/2$). 
+Dos sites em que pudemos observar uma diferença estatística significativa, existe um número maior de comunidades nas quais podemos observar que mulheres são mais ativas que homens do que o contrário. Esta diferença é maior quando observamos o número de perguntas ($21/62/2$), seguido pelo número de respostas ($18/56/11$) e, finalmente, o número total de contribuições ($10/73/2$). 
 
-Interessante notar que existe uma diferença no padrão de categorias nas quais podemos notar diferenças no número de respostas entre homens e mulheres, comparando aos outros tipos de contribuição. Para perguntas, comentários e a soma de todas as contribuições, as comunidades onde mulheres são geralmente mais ativas pertencem a categorias relacionadas a \emph{STEM}. Para perguntas a distribuição de comunidades relacionadas a \emph{STEM} é $16/28/0$, como pode ser observado na Figura~\ref{fig:questions}. Contudo, quando olhamos para respostas, apenas três das dezoito comunidades onde mulheres respondem mais do que homens são relacionadas a \emph{STEM} (como pode ser visto na Figura~\ref{fig:answers}). É mais comum encontrar comunidades das categorias \emph{Life/Arts} ou \emph{Professional} dentre os sites que pode-se observar que mulheres respondem significantemente mais do que homens. Mais ainda, duas das três comunidades relacionadas a \emph{STEM} onde mulheres respondem mais que homens abordam assuntos que são estereotipados como mais femininos: \emph{UX} e \textit{Software Quality Assurance}. As comunidades onde homens respondem significantemente mais do que mulheres podem ser vistas na Figura~\ref{fig:answers-men}.
+Interessante notar que existe uma diferença no padrão de categorias nas quais podemos notar diferenças no número de respostas entre homens e mulheres, comparando aos outros tipos de contribuição. Para perguntas, comentários e a soma de todas as contribuições, as comunidades onde mulheres são geralmente mais ativas pertencem a categorias relacionadas à \emph{STEM}. Para perguntas a distribuição de comunidades relacionadas à \emph{STEM} é $16/28/0$, como pode ser observado na Figura~\ref{fig:questions}. Contudo, quando olhamos para respostas, apenas três das dezoito comunidades onde mulheres respondem mais do que homens são relacionadas a \emph{STEM} (como pode ser visto na Figura~\ref{fig:answers}). É mais comum encontrar comunidades das categorias \emph{Life/Arts} ou \emph{Professional} dentre os sites que pode-se observar que mulheres respondem significativamente mais do que homens. Mais ainda, duas das três comunidades relacionadas à \emph{STEM}, onde mulheres respondem mais que homens abordam assuntos que são estereotipados como mais femininos: \emph{UX} e \textit{Software Quality Assurance}. As comunidades onde homens respondem significativamente mais do que mulheres podem ser vistas na Figura~\ref{fig:answers-men}.
 
 \begin{figure}
   \centering
   \includegraphics[width=1\columnwidth]{figures/respostas_mulheres.pdf}
-  \caption[Comparação do número de respostas em comunidades onde mulheres respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário.}~\label{fig:answers}
+  \caption[Comparação do número de respostas em comunidades onde mulheres respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens.}~\label{fig:answers}
 \end{figure}
 
 
-Estes resultados nos mostram que mulheres que identificam seu gênero e que se engajam à comunidade, na maioria dos sites, não contribuem menos do que os homens. Ao contrário: quando podemos observar diferenças, elas são frequentemente apontam que mulheres contribuem mais do que homens.
+Estes resultados nos mostram que mulheres que identificam seu gênero e que se engajam à comunidade, na maioria dos sites, não contribuem menos do que os homens. Ao contrário: quando podemos observar diferenças, essas frequentemente apontam que mulheres contribuem mais do que homens.
 
 \section{Qualidade} % (fold)
 \label{subsec:qualidade}
-Poucos foram os sites que apresentaram uma diferença significante em como a comunidade avalia a qualidade das contribuições de homens e mulheres. Esta diferença ocorre menos frequentemente do que as diferenças em número de contribuições. Para a taxa de aceitação ($7/76/2$) e utilidade média das respostas ($9/74/2$) dos usuários, um número pequeno de comunidades tende a atribuir às respostas das mulheres uma qualidade maior do que às dos homens. Para a média dos votos de uma pergunta, podemos observar um equilíbrio nos sites que estudamos ($8/67/10$). Mais ainda, não encontramos um padrão relacionado às categorias onde podemos encontrar diferença significativa na avaliação de qualidade.
+Poucos foram os sites que apresentaram uma diferença significante em como a comunidade avalia a qualidade das contribuições de homens e mulheres. Esta diferença ocorre menos frequentemente do que as diferenças em número de contribuições. Para a taxa de aceitação ($7/76/2$) e utilidade média das respostas ($9/74/2$) dos usuários, um número pequeno de comunidades tende a atribuir às respostas das mulheres uma qualidade maior do que às dos homens. Para a média dos votos de uma pergunta, podemos observar um equilíbrio nos sites que estudamos ($8/67/10$). Não encontramos um padrão relacionado às categorias a partir dos quais podemos encontrar diferença significativa na avaliação de qualidade. E, assim como para o número de contribuições, o estimador de Hodges-Lehmann nos indica um valor ínfimo na diferença de qualidade entre homens e mulheres, quando o teste estatístico indica que há uma diferença entre as amostras.
 
 % section qualidade (end)
 
@@ -38,10 +38,10 @@ Para as métricas relacionadas ao tempo dedicado à comunidade, as diferenças o
 \begin{figure}[!b]
   \raggedleft
   \includegraphics[width=1\columnwidth]{figures/respostas_homens.pdf}
-  \caption[Comparação do número de respostas em comunidades onde homens respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e homens contribuem mais do que mulheres. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{fig:answers-men}
+  \caption[Comparação do número de respostas em comunidades onde homens respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e homens contribuem mais do que mulheres. }~\label{fig:answers-men}
 \end{figure}
 
-Nós também notamos que as maiores diferenças entre os gêneros quanto ao tempo de vida na comunidade ocorre no StackOverflow, o mais popular e também o mais antigo site do \emph{StackExchange}. Mais ainda, os próximos três sites em grandeza de diferença de tempo de vida também são antigos e relacionados a \emph{STEM}: \emph{MathOverflow}, \emph{SuperUser} e \emph{ServerFault}. Estas diferenças podem ser observadas na Tabela~\ref{table:lifetime}. 
+Nós também notamos que as maiores diferenças entre os gêneros quanto ao tempo de vida na comunidade ocorre no StackOverflow, o mais popular e também o mais antigo site do \emph{StackExchange}. Os próximos três sites em grandeza de diferença de tempo de vida também são antigos e relacionados a \emph{STEM}: \emph{MathOverflow}, \emph{SuperUser} e \emph{ServerFault}. Estas diferenças podem ser observadas na Tabela~\ref{table:lifetime}. 
 
 \begin{table}[!b]
 \centering
@@ -64,24 +64,24 @@ Nós também notamos que as maiores diferenças entre os gêneros quanto ao temp
 -1.66                             & science            & philosophy         & 41                 \\ \midrule
 \textbf{74.72}                             & technology         & wordpress          & 51                 \\ \bottomrule
 \end{tabular}
-\caption[Diferença de tempo de vida entre homens e mulheres]{Sites onde podemos observar uma diferença estatística significante entre homens e mulheres quanto ao seu tempo de vida na comunidade. Apresentamos a diferença entre a mediana de dias ativos, a idade da comunidade em dias e sua categoria.}~\label{table:lifetime}
+\caption[Diferença de tempo de vida entre homens e mulheres]{Sites onde podemos observar uma diferença estatística significante entre homens e mulheres quanto ao seu tempo de vida na comunidade. Apresentamos a diferença entre a mediana de dias ativos, a idade da comunidade em meses e sua categoria.}~\label{table:lifetime}
 \end{table}
 
-Com relação à frequência, um padrão diferente pode ser observado. Em todos os sete sites relacionados a \emph{STEM} que apresentaram diferença estatística com relação à frequência de atividade, mulheres contribuem mais frequentemente do que homens. Assimilando isto com o resultado relacionado ao tempo de vida, podemos inferir que, apesar que mulheres deixam a comunidade antes que os homens, elas contribuem mais enquanto durante o tempo que ainda estão associadas ao site.
+Com relação à frequência, um padrão diferente pode ser observado. Em todos os sete sites relacionados a \emph{STEM} que apresentaram diferença estatística com relação à frequência de atividade, mulheres contribuem mais frequentemente do que homens. Assimilando isto com o resultado relacionado ao tempo de vida, podemos inferir que, apesar de as mulheres deixarem a comunidade antes dos homens, elas contribuem mais durante o tempo que ainda estão associadas ao site.
 
 
 \section{Contribuições e novos registros ao longo do tempo}
-Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições provenientes de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
+Observando as contribuições de homens e mulheres ao longo do tempo, notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições provenientes de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registros feitos por homens e mulheres ao longo do tempo, é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados à \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
 
 \section{Focando nos maiores sites} 
 
-Os três maiores sites do \emph{StackExchange} -- \emph{StackOverflow}, \emph{ServerFault} e \emph{SuperUser} -- são muito maiores e mais antigos que os demais sites disponíveis na nossa amostra. Já que juntamente com os sites \emph{Mathematics} e \emph{Programmers} eles possuem uma proporção significante dos usuários de toda a plataforma \emph{StackExchange}, sendo os cinco maiores sites, em número de usuários, da nossa amostra, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. 
+Os três maiores sites do \emph{StackExchange} -- \emph{StackOverflow}, \emph{ServerFault} e \emph{SuperUser} -- são muito maiores e mais antigos que os demais sites disponíveis na nossa amostra. Juntamente com os sites \emph{Mathematics} e \emph{Programmers} eles possuem uma proporção significante dos usuários de toda a plataforma \emph{StackExchange}, sendo os cinco maiores sites, em número de usuários, da nossa amostra, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. 
 
-O \emph{StackOverflow}, primeira comunidade da plataforma, mulheres perguntam mais e homens costumam responder mais, apesar de não encontrarmos diferença estatística no total de contribuições feita por ambos os gêneros. Perguntas e respostas vistas como mais qualificadas pelos usuários advêm de homens. Ademais, o padrão de homens possuírem maior tempo de vida na comunidade, enquanto mulheres possuem maior frequência de contribuição também pode ser visto neste site. E ainda, a proporção de mulheres se cadastrando e contribuindo para a comunidade tem aumentado nos últimos anos.
+No \emph{StackOverflow}, primeira comunidade da plataforma, mulheres perguntam mais e homens costumam responder mais, apesar de não encontrarmos diferença estatística no total de contribuições feita por ambos os gêneros. Perguntas e respostas vistas como mais qualificadas pelos usuários advêm de homens. Ademais, o padrão de homens possuírem maior tempo de vida na comunidade, enquanto mulheres possuem maior frequência de contribuição também pode ser visto neste site. E, ainda, a proporção de mulheres se cadastrando e contribuindo para a comunidade tem aumentado nos últimos anos.
 
-Os três maiores sites do \emph{StackExchange} -- \emph{StackOverflow}, \emph{ServerFault} e \emph{SuperUser} -- são muito maiores e mais antigos que os demais sites disponíveis na nossa amostra. Já que juntamente com os sites \emph{Mathematics} e \emph{Programmers} eles possuem uma proporção significante dos usuários de toda a plataforma \emph{StackExchange}, sendo os cinco maiores sites, em número de usuários, da nossa amostra, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. 
+Os três maiores sites do \emph{StackExchange} -- \emph{StackOverflow}, \emph{ServerFault} e \emph{SuperUser} -- são muito maiores e mais antigos que os demais sites disponíveis na nossa amostra. Juntamente com os sites \emph{Mathematics} e \emph{Programmers} eles possuem uma proporção significante dos usuários de toda a plataforma \emph{StackExchange}, sendo os cinco maiores sites, em número de usuários, da nossa amostra, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. 
 
-Em todas as demais comunidades dentre as cinco maiores comunidades da nossa amostra, homens respondem mais que mulheres. O que já era esperado, já que todas tratam de assuntos relacionados a \emph{STEM}. Mulheres perguntam mais nos sites \emph{Programmers} e \emph{Mathematics}. E, nesse último, mulheres comentam e têm um numero total de contribuições maior que o dos homens também. Quanto à qualidade, apenas a \emph{ServerFault} apresentou diferença estatística e em apenas uma métrica (média de votos das perguntas), favorável aos homens. Nos sites \emph{ServerFault}, \emph{SuperUser}, homens apresentam um tempo de vida na comunidade maior do que as mulheres, enquanto apenas na \emph{Mathematics} mulheres possuem uma frequência de postagem maior que a dos homens. As demais não apresentam diferença estatística. Ao longo do tempo, mulheres têm contribuído mais do que homens nos sites \emph{Programmers}, \emph{Mathematics} e \emph{ServerFault}. 
+Em todas as demais comunidades dentre as cinco maiores comunidades da nossa amostra, homens respondem mais que mulheres. Tal fato já era esperado, já que todas tratam de assuntos relacionados à \emph{STEM}. Mulheres perguntam mais nos sites \emph{Programmers} e \emph{Mathematics}. E, nesse último, mulheres comentam e têm um numero total de contribuições maior que o dos homens também. Quanto à qualidade, apenas a \emph{ServerFault} apresentou diferença estatística e em apenas uma métrica (média de votos das perguntas), favorável aos homens. Nos sites \emph{ServerFault}, \emph{SuperUser}, homens apresentam tempo de vida na comunidade maior do que as mulheres, enquanto apenas na \emph{Mathematics} mulheres possuem uma frequência de postagem maior que a dos homens. As demais não apresentam diferença estatística. Ao longo do tempo, mulheres têm contribuído mais do que homens nos sites \emph{Programmers}, \emph{Mathematics} e \emph{ServerFault}. 
 
 Por fim, uma comparação do número de contribuições nos cinco maiores sites do \emph{StackExchange} relacionados a \emph{STEM} pode ser encontrada na Figura~\ref{fig:top-five}.
 
@@ -89,7 +89,7 @@ Por fim, uma comparação do número de contribuições nos cinco maiores sites 
 \begin{figure}[!b]
   \centering
   \includegraphics[height=0.65\paperheight]{figures/top5_quantidade.pdf}
-  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições provenientes de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a \emph{STEM} do \emph{StackExchange}. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis.}~\label{fig:top-five}
+  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições provenientes de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a \emph{STEM} do \emph{StackExchange}.}~\label{fig:top-five}
 \end{figure}
 
 
